<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="50dp"
        android:id="@+id/label_bar_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_no"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/barcode_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/barcode_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_scanner" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/barcode_scanner"
            android:text="@string/search" />
    </RelativeLayout>
    
</LinearLayout>