<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/user_type"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_type"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/user_type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_type"
        android:layout_toRightOf="@id/user_type"
        android:entries="@array/user_type_name" />

	<TextView
        android:id="@+id/user_email"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textStyle="bold" 
        android:layout_below="@id/user_type"/>
	
	<EditText
        android:id="@+id/user_email_value"
        android:layout_marginTop="70dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:layout_toRightOf="@id/user_email"/>
	
	<TextView
        android:id="@+id/user_pass"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_pass"
        android:textStyle="bold" 
        android:layout_below="@id/user_email"/>
	
	<EditText
        android:id="@+id/user_pass_value"
        android:layout_marginTop="110dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:layout_toRightOf="@id/user_pass"/>
	
	<Button
            android:id="@+id/login_submit"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_pass"
            android:text="submit" />

        <Button
            android:id="@+id/login_cancel"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_submit"
            android:layout_below="@id/user_pass"
            android:text="cancel" />"


</RelativeLayout>
